--- a/source/components/Spinner/styles.m.css
+++ b/source/components/Spinner/styles.m.css
@@ -11,7 +11,7 @@
     position: fixed;
     width: 30px;
     height: 30px;
-    border: 3px solid #ddd;
+    border: 3px solid #66ff;
     border-top: 4px solid var(--paletteColor10);
     border-radius: 100%;
     top: 25px;
